--- a/Front/index.html
+++ b/Front/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="css/style.css">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.11.9/lib/p5.min.js"></script>
         <script src="js/gameLogic.js"></script>
+        <script src="js/aiLogic.js"></script>
         <script src="js/drawing.js"></script>
     </head>
     <body>
