--- a/Front/index.html
+++ b/Front/index.html
@@ -10,23 +10,27 @@
     </head>
     <body>
         <div id="layout">
-            <div id="p5-canvas">
+            <nav class="layout-child" id="navbar">
+
+            </nav>
+            <div id="p5-canvas" class="layout-child">
                 
             </div>
-            <div id="scores">
-                <div class="player-score">
-                    <div class="player-name"><span>Player 1</span></div>
-                    <div class="player-color"><span>Player Color:</span><span id="player-1-colors"></span></div>
-                    <div class="player-score"><span>Player Score: </span><span id="player-1-score"></span></div>
+            <div id="scores" class="layout-child">
+                <div class="layout-padding"></div>
+                <div class="player-score-card">
+                    <div class="player-name">Player 1</div>
+                    <div class="player-color"><span>Player Color:</span><span id="player-1-colors" class="color-box"></span></div>
+                    <div class="player-score"><span>Player Score: </span><span id="player-1-score" class="score-text"></span></div>
                 </div>
-                <div class="player-score">
-                    <div class="player-name"><span>Player 2</span></div>
-                    <div class="player-color"><span>Player Color:</span><span id="player-2-colors"></span></div>
-                    <div class="player-score"><span>Player Score: </span><span id="player-2-score"></span></div>
+                <div class="layout-padding"></div>
+                <div class="player-score-card">
+                    <div class="player-name">Player 2</div>
+                    <div class="player-color"><span>Player Color: </span><span id="player-2-colors" class="color-box"></span></div>
+                    <div class="player-score"><span>Player Score: </span><span id="player-2-score" class="score-text"></span></div>
                 </div>
+                <div class="layout-padding"></div>
             </div>
         </div>
-        <script>
-        </script>
     </body>
 </html>
