Added turn reminder and winner notification

--- a/Front/index.html
+++ b/Front/index.html
@@ -22,14 +22,19 @@
                     <div class="player-name">Player 1</div>
                     <div class="player-color"><span>Player Color:</span><span id="player-1-colors" class="color-box"></span></div>
                     <div class="player-score"><span>Player Score: </span><span id="player-1-score" class="score-text"></span></div>
+                    <div id="p1-winner-box"></div>
                 </div>
                 <div class="layout-padding"></div>
                 <div class="player-score-card">
                     <div class="player-name">Player 2</div>
                     <div class="player-color"><span>Player Color: </span><span id="player-2-colors" class="color-box"></span></div>
                     <div class="player-score"><span>Player Score: </span><span id="player-2-score" class="score-text"></span></div>
+                    <div id="p2-winner-box"></div>
                 </div>
                 <div class="layout-padding"></div>
+            </div>
+            <div class="layout-child">
+                <div id="turn-reminder"></div>
             </div>
         </div>
     </body>
